Bug 96144 - [11 Regression] ICE in extract_insn, at recog.c:2294 since r11-1970-gfab263ab0fc10ea0
Summary: [11 Regression] ICE in extract_insn, at recog.c:2294 since r11-1970-gfab263ab...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 11.0
: P3 normal
Target Milestone: 11.0
Assignee: H.J. Lu
URL: https://gcc.gnu.org/pipermail/gcc-pat...
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2020-07-10 07:28 UTC by Martin Liška
Modified: 2020-07-10 11:34 UTC (History)
0 users

See Also:
Host:
Target: x86_64-*-* i?86-*-*
Build:
Known to work: 10.1.0
Known to fail: 11.0
Last reconfirmed: 2020-07-10 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liška 2020-07-10 07:28:39 UTC
I see the following ICE:

$ gcc /home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/sse-recip-vec.c -Ofast -mavx512vbmi -c
/home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/sse-check.h: In function ‘do_test’:
/home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/sse-check.h:13:1: error: unrecognizable insn:
   13 | }
      | ^
(insn 21 20 22 2 (set (reg:V8SF 138)
        (fma:V8SF (reg:V8SF 136)
            (reg:V8SF 135)
            (reg:V8SF 142))) "/home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/sse-recip-vec.c":33:14 -1
     (nil))
during RTL pass: vregs
/home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/sse-check.h:13:1: internal compiler error: in extract_insn, at recog.c:2294
0x7ffff7aa1cc9 __libc_start_main
	../csu/libc-start.c:308
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
Comment 1 Richard Biener 2020-07-10 08:51:45 UTC
This shows in multiple testsuite fails on x86-64 as well.

FAIL: gcc.target/i386/avx512er-vrsqrt28ps-3.c (internal compiler error)
FAIL: gcc.target/i386/avx512er-vrsqrt28ps-3.c (test for excess errors)
UNRESOLVED: gcc.target/i386/avx512er-vrsqrt28ps-3.c compilation failed to produce executable
FAIL: gcc.target/i386/avx512er-vrsqrt28ps-4.c (internal compiler error)
FAIL: gcc.target/i386/avx512er-vrsqrt28ps-4.c (test for excess errors)
UNRESOLVED: gcc.target/i386/avx512er-vrsqrt28ps-4.c scan-assembler-not vrcp28ps[^\\n\\r]*zmm[0-9]+(?:\\n|[ \\\\t]+#)
UNRESOLVED: gcc.target/i386/avx512er-vrsqrt28ps-4.c scan-assembler-times vrsqrt28ps[^\\n\\r]*zmm[0-9]+(?:\\n|[ \\\\t]+#) 1
FAIL: gcc.target/i386/avx512er-vrsqrt28ps-5.c (internal compiler error)
FAIL: gcc.target/i386/avx512er-vrsqrt28ps-5.c (test for excess errors)
UNRESOLVED: gcc.target/i386/avx512er-vrsqrt28ps-5.c compilation failed to produce executable
FAIL: gcc.target/i386/avx512er-vrsqrt28ps-6.c (internal compiler error)
FAIL: gcc.target/i386/avx512er-vrsqrt28ps-6.c (test for excess errors)
UNRESOLVED: gcc.target/i386/avx512er-vrsqrt28ps-6.c scan-assembler-times vrcp28ps[^\\n\\r]*zmm[0-9]+(?:\\n|[ \\\\t]+#) 1
UNRESOLVED: gcc.target/i386/avx512er-vrsqrt28ps-6.c scan-assembler-times vrsqrt28ps[^\\n\\r]*zmm[0-9]+(?:\\n|[ \\\\t]+#) 1
Comment 2 H.J. Lu 2020-07-10 11:06:32 UTC
A patch was posted at

https://gcc.gnu.org/pipermail/gcc-patches/2020-July/549769.html
Comment 3 CVS Commits 2020-07-10 11:33:39 UTC
The master branch has been updated by H.J. Lu <hjl@gcc.gnu.org>:

https://gcc.gnu.org/g:a6645a826f58b68f68dff30e6e6e78542099d0cc

commit r11-2013-ga6645a826f58b68f68dff30e6e6e78542099d0cc
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Thu Jul 9 14:56:48 2020 -0700

    x86: Check TARGET_AVX512VL when enabling FMA
    
    Check TARGET_AVX512VL when enabling FMA to avoid
    
    gcc.target/i386/avx512er-vrsqrt28ps-3.c:25:1: error: unrecognizable insn:
    (insn 29 28 30 6 (set (reg:V8SF 108)
            (fma:V8SF (reg:V8SF 106)
                (reg:V8SF 105)
                (reg:V8SF 110)))
    
    when TARGET_AVX512VL isn't enabled.
    
            PR target/96144
            * config/i386/i386-expand.c (ix86_emit_swsqrtsf): Check
            TARGET_AVX512VL when enabling FMA.
Comment 4 H.J. Lu 2020-07-10 11:34:04 UTC
Fixed for GCC 11.